--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Snake Game in React.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "webpack-dev-server --watch",
+    "build":"webpack --watch"
   },
   "keywords": [
     "Sanke",
